--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,38 +1,25 @@
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <link href="http://gmpg.org/xfn/11" rel="profile">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
   
-    {% unless site.plugins contains "jekyll-seo-tag" %}
-      <title>{{ page.title }} - {{ site.title }}</title>
+    <!-- Enable responsiveness on mobile devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   
-      {% if page.description %}
-        <meta name="Description" content="{{ page.description }}">
+    <title>
+      {% if page.title == "Home" %}
+        {{ site.title }} &middot; {{ site.tagline }}
+      {% else %}
+        {{ page.title }} &middot; {{ site.title }}
       {% endif %}
-    {% endunless %}
+    </title>
   
-    <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-default.css' | relative_url }}">
+    <!-- CSS -->
+    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   
-    {% if site.ga_tracking != nil %}
-      <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga_tracking }}"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-  
-        gtag('config', '{{ site.ga_tracking }}'{% unless site.ga_tracking_anonymize_ip == nil %}, { 'anonymize_ip': true }{% endunless %});
-      </script>
-  
-    {% endif %}
-  
-    {% if site.search_enabled != false %}
-      <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
-    {% endif %}
-    <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | relative_url }}"></script>
-  
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-    {% seo %}
-  
-    {% include head_custom.html %}
-  
+    <!-- RSS -->
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
   </head>
