--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,15 @@
-<footer class="footer">
-    {% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}">
-    {% include svg-icons/github.html %}</a>{% endif %}
-</footer>
+<!DOCTYPE html>
+<html lang="en-us">
+
+  {% include head.html %}
+
+  <body>
+
+    {% include sidebar.html %}
+
+    <div class="content container">
+      {{ content }}
+    </div>
+
+  </body>
+</html>
