--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
       {% endfor %}
 
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/_posts/">Blog Posts</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">Projects</a>
+      <a class="sidebar-nav-item" href="https://github.com/XingjianXuanyuan">Projects</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
