--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="{{ site.author.url }}">
           {{ site.title }}
         </a>
       </h1>
@@ -27,7 +27,7 @@
       {% endfor %}
 
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/_posts/">Blog Posts</a>
-      <a class="sidebar-nav-item" href="https://github.com/XingjianXuanyuan">Projects</a>
+      <a class="sidebar-nav-item" href="{{ site.author.url }}">Projects</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
