--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}_posts/">Blog Posts</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/_posts/">Blog Posts</a>
       <a class="sidebar-nav-item" href="{{ site.author.url }}">Projects</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
