--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,8 +26,9 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/_posts/">Blog Posts</a>
-      <a class="sidebar-nav-item" href="{{ site.author.url }}">Projects</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/tree/main/_pages/about.md">About</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/tree/main/_pages/posts.md">Blog Posts</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/tree/main/_pages/projects.md">Projects</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
