--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
     <link href="http://gmpg.org/xfn/11" rel="profile">
+    <link href="assets/css/zenburn.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
   
@@ -18,6 +19,7 @@
     <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css">
     <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css">
     <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/zenburn.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   
     <!-- RSS -->
